--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "*"
-unicase = "^2"
-regex = "^1.3"
+
+[workspace]
+members = [
+    "hello",
+    "guess",
+    "minigrep",
+    "cacher"
+]
